Fixed issue where modals larger than viewport were clipped

--- a/css/styles.css
+++ b/css/styles.css
@@ -316,14 +316,13 @@ a:hover {
 
 }
 
-.modal:before {
-  content: '';
-  display: inline-block;
+/*.modal:before {
+  /*content: '';*/
+  /*display: inline-block;*/
   height: 100%;
-  vertical-align: middle;
-  margin-right: -4px;
+  /*vertical-align: middle;*/
 
-}
+}*/
 
 .modal-dialog {
   display: inline-block;
@@ -360,6 +359,7 @@ a:hover {
 
 .modal p {
   font-size: 12pt;
+  text-align: left;
 }
 
 .flexible {
@@ -446,7 +446,7 @@ a:hover {
         .keynote-details {
           font-size: 14pt;
         }
-		
+
 	.keynote-icon {
 	  max-width: 100px;
 	}
